Add references from mathemage/endgames-master-thesis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -165,3 +165,26 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
+
+@article{BurchJohansonBowling13,
+  author = {Burch, N. and Johanson, M. and Bowling, M.},
+  title = {Solving Imperfect Information Games Using Decomposition},
+  journal = {Proceedings of the Twenty-Eighth Conference on Artificial Intelligence},
+  year = {2014}
+}
+
+@book{AGT07,
+  author = {Nisan, Noam and Roughgarden, Tim and Tardos, Eva and Vazirani, Vijay V.},
+  title = {Algorithmic Game Theory},
+  year = {2007},
+  isbn = {0521872820},
+  publisher = {Cambridge University Press},
+  address = {New York, NY, USA},
+} 
+
+@inproceedings{GanzfriedSandholm13improving,
+  title={Improving performance in imperfect-information games with large state and action spaces by solving endgames},
+  author={Ganzfried, Sam and Sandholm, Tuomas},
+  booktitle={Computer Poker and Imperfect Information Workshop at the National Conference on Artificial Intelligence (AAAI)},
+  year={2013}
+}
