--- a/bibliography.bib
+++ b/bibliography.bib
@@ -188,3 +188,11 @@
   booktitle={Computer Poker and Imperfect Information Workshop at the National Conference on Artificial Intelligence (AAAI)},
   year={2013}
 }
+
+@phdthesis{Muller1995computer,
+  title={Computer Go as a sum of local games: an application of combinatorial game theory},
+  author={M{\"u}ller, Martin},
+  year={1995},
+  school={TU Graz}
+}
+
