Add Takagawa85: How Many Moves is it Possible to Read?

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -190,9 +190,19 @@
 }
 
 @phdthesis{Muller1995computer,
-  title={Computer Go as a sum of local games: an application of combinatorial game theory},
-  author={M{\"u}ller, Martin},
-  year={1995},
-  school={TU Graz}
+  title = {Computer Go as a sum of local games: an application of combinatorial game theory},
+  author = {M{\"u}ller, Martin},
+  year = {1995},
+  school = {TU Graz}
 }
 
+@article{Takagawa85,
+  author  = {Takagawa Shukaku}, 
+  title   = {How Many Moves is it Possible to Read?},
+  journal = {Go World},
+  number  = 41,
+  pages   = {30-33},
+  month   = {Autumn},
+  year    = 1985,
+  note    = {The Ishi Press, Inc.}
+}
