Add Semantic Style Transfer and Turning Two-Bit Doodles into Fine Artworks

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,6 +62,13 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{Champandard2016semantic,
+  title={Semantic Style Transfer and Turning Two-Bit Doodles into Fine Artworks},
+  author={Champandard, Alex J},
+  journal={arXiv preprint arXiv:1603.01768},
+  year={2016}
+}
+
 @online{DeepDrumpf,
   author = {Bradley Hayes},
   year = {2016},
