Add sources for Go-related research in neural networks

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -208,8 +208,41 @@
   title   = {How Many Moves is it Possible to Read?},
   journal = {Go World},
   number  = 41,
-  pages   = {30-33},
+  pages   = {30--33},
   month   = {Autumn},
   year    = 1985,
   note    = {The Ishi Press, Inc.}
+}
+
+@article{Wilcox79,
+  author  = {Wilcox, Bruce}, 
+  title   = {Computer {G}o - The {R}eitman-{W}ilcox Program},
+  journal = {American Go Journal},
+  year    = 1979,
+  number  = 14,
+  pages   = {23--41}
+}
+
+@article{Enderton1991golem,
+  title={The {G}olem {G}o program},
+  author={Enderton, Herbert D},
+  year={1991},
+  journal={Carnegie Mellon University}
+}
+
+@article{Stoutamire1991machine,
+  title={Machine learning, game play, and {G}o},
+  author={Stoutamire, David},
+  journal={Case Western Reserve University, Tech. Rep},
+  pages={91--128},
+  year={1991}
+}
+
+@article{Schraudolph1994temporal,
+  title={Temporal difference learning of position evaluation in the game of {G}o},
+  author={Schraudolph, Nicol N. and Dayan, Peter and Sejnowski, Terrence J.},
+  journal={Advances in Neural Information Processing Systems},
+  pages={817--817},
+  year={1994},
+  publisher={MORGAN KAUFMANN PUBLISHERS}
 }
