Add sources for definitions of chess endgames

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -246,3 +246,54 @@
   year={1994},
   publisher={MORGAN KAUFMANN PUBLISHERS}
 }
+
+@inbook{Speelman1981endgame,
+  title={Endgame preparation: advanced analysis of important areas},
+  pages={7--8},
+  author={Speelman, Jonathan},
+  year={1981},
+  publisher={BT Batsford}
+}
+
+@inbook{Minev2004practical,
+  title={A Practical Guide to Rook Endgames},
+  pages={5},
+  author={Minev, Nikolay},
+  year={2004},
+  publisher={Russell Enterprises}
+}
+
+@book{Fine1952middle,
+  title={The middle game in chess},
+  author={Fine, Reuben},
+  year={1952},
+  publisher={D. McKay Co.}
+}
+
+@book{Portisch1981six,
+  title={Six hundred endings},
+  author={Portisch, L. and S{\'a}rk{\"o}zy, B.},
+  lccn={80040754},
+  year={1981},
+  publisher={Pergamon Press}
+}
+
+@book{Alburt1999just,
+  title={Just the Facts!: Winning Endgame Knowledge in One Volume},
+  author={Alburt, L. and Krogius, N.},
+  isbn={9781889323060},
+  lccn={99066852},
+  series={Comprehensive chess course series},
+  year={1999},
+  publisher={Chess Information and Research Center}
+}
+
+@inbook{Flear2007practical,
+  title={Practical Endgame Play - Beyond the Basics: The Definitive Guide to the Endgames That Really Matter},
+  pages={7--8},
+  author={Flear, G.},
+  isbn={9781857445558},
+  series={Everyman Chess},
+  year={2007},
+  publisher={Everyman Chess}
+}
