Add sources for chess retrograde analysis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -313,3 +313,23 @@
   url = {http://home.hccnet.nl/h.g.muller/EGTB.html},
   urldate = {2016-06-24}
 }
+
+@article{Bellman1965application,
+  title={On the application of dynamic programing to the determination of optimal play in chess and checkers},
+  author={Bellman, Richard},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={53},
+  number={2},
+  pages={244},
+  year={1965},
+  publisher={National Academy of Sciences}
+}
+
+@online{Krabbe2014StillersMonster,
+  author = {Krabbé, Tim},
+  title = {STILLER's MONSTERS or perfection in chess},
+  year = 2014,
+  url = {https://timkr.home.xs4all.nl/chess/perfect.htm},
+  urldate = {2016-06-24}
+}
+
