--- a/bibliography.bib
+++ b/bibliography.bib
@@ -98,7 +98,7 @@
 
 @article{Silver2016mastering,
   title={Mastering the game of Go with deep neural networks and tree search},
-  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and van den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  author={Silver, David and Huang, Aja and Maddison, Chris J. and Guez, Arthur and Sifre, Laurent and van den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
   journal={Nature},
   volume={529},
   number={7587},
@@ -333,3 +333,10 @@
   urldate = {2016-06-24}
 }
 
+@online{Bourzutschky2006sevenman,
+  author = {Bourzutschky, Marc},
+  title = {7-man endgames with pawns},
+  year = 2006,
+  url = {http://kirill-kryukov.com/chess/discussion-board/viewtopic.php?t=805},
+  urldate = {2016-06-24}
+}
