Add source for endgame tablebase with a priori information

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -340,3 +340,14 @@
   url = {http://kirill-kryukov.com/chess/discussion-board/viewtopic.php?t=805},
   urldate = {2016-06-24}
 }
+
+@article{Herik1987sixmenendgame,
+  title={A 6-Men-Endgame Database: KRP(a2)KBP(a3)},
+  author={Herik, H. Jaap and Herschberg, Israel Samuel and Nakad, Najib},
+  journal={ICCA JOURNAL},
+  volume={10},
+  number={4},
+  pages={163--180},
+  year={1987},
+  publisher={INTL COMPUTER CHESS ASSN UNIV LIMBURG, DEPT COMPUTER SCI FACULTY GENERAL SCIENCES}
+}
