Add source for EXPTIME-completeness of generalized chess

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -351,3 +351,12 @@
   year={1987},
   publisher={INTL COMPUTER CHESS ASSN UNIV LIMBURG, DEPT COMPUTER SCI FACULTY GENERAL SCIENCES}
 }
+
+@inproceedings{Fraenkel1981computing,
+  title={Computing a Perfect Strategy for $n\times n$ Chess Requires Time Exponential in $n$},
+  author={Fraenkel, Aviezri S. and Lichtenstein, David},
+  booktitle={International Colloquium on Automata, Languages, and Programming},
+  pages={278--293},
+  year={1981},
+  organization={Springer}
+}
