Add source for longest 7-man chess endgames

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -360,3 +360,11 @@
   year={1981},
   organization={Springer}
 }
+
+@online{Lomonosov2012eightlongest,
+  author = {{Lomonosov Tablebases}},
+  title = {8 Longest 7-Man Checkmates},
+  year = 2012,
+  url = {http://ldis-sw.cs.msu.ru/articles/Top8DTM_eng},
+  urldate = {2016-06-24}
+}
