Add wikipedia source for effects of tablebase on endgame theory

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -368,3 +368,11 @@
   url = {http://ldis-sw.cs.msu.ru/articles/Top8DTM_eng},
   urldate = {2016-06-24}
 }
+
+@online{Wikipedia2016endgame,
+  author = {Wikipedia},
+  title = {Endgame tablebase § Endgame Theory},
+  year = 2016,
+  url = {https://en.wikipedia.org/wiki/Endgame_tablebase#Endgame_theory},
+  urldate = {2016-06-25}
+}
