Add sources for winning ratio of KQR-KQR and KQQ-KQQ chess endgames

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -376,3 +376,23 @@
   url = {https://en.wikipedia.org/wiki/Endgame_tablebase#Endgame_theory},
   urldate = {2016-06-25}
 }
+
+@article{Haworth2001discarding,
+  title={Discarding Like Pieces},
+  author={Haworth, G.~McC.},
+  journal={ICGA JOURNAL},
+  volume={24},
+  number={3},
+  pages={161--161},
+  year={2001},
+  publisher={UNIV MAASTRICHT FACULTY GENERAL SCIENCES DEPT COMPUTER SCIENCES/IKAT}
+}
+
+@book{Nunn2002secrets,
+  title={Secrets of Pawnless Endings},
+  author={Nunn, J.},
+  isbn={9781901983654},
+  year={2002},
+  publisher={Gambit}
+}
+
