Switch from @inbook to @book
- use \cite[pp.~x--y]{} instead

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -247,17 +247,15 @@
   publisher={MORGAN KAUFMANN PUBLISHERS}
 }
 
-@inbook{Speelman1981endgame,
+@book{Speelman1981endgame,
   title={Endgame Preparation: Advanced Analysis of Important Areas},
-  pages={7--8},
   author={Speelman, Jonathan},
   year={1981},
   publisher={BT Batsford}
 }
 
-@inbook{Minev2004practical,
+@book{Minev2004practical,
   title={A Practical Guide to Rook Endgames},
-  pages={5},
   author={Minev, Nikolay},
   year={2004},
   publisher={Russell Enterprises}
@@ -288,9 +286,8 @@
   publisher={Chess Information and Research Center}
 }
 
-@inbook{Flear2007practical,
+@book{Flear2007practical,
   title={Practical Endgame Play - Beyond the Basics: The Definitive Guide to the Endgames That Really Matter},
-  pages={7--8},
   author={Flear, G.},
   isbn={9781857445558},
   series={Everyman Chess},
