--- a/bibliography.bib
+++ b/bibliography.bib
@@ -393,3 +393,9 @@
   publisher={Gambit}
 }
 
+@book{Osborne1994course,
+  title={A~Course in~Game Theory},
+  author={Osborne, Martin~J. and Rubinstein, Ariel},
+  year={1994},
+  publisher={The MIT Press}
+}
