--- a/bibliography.bib
+++ b/bibliography.bib
@@ -399,3 +399,19 @@
   year={1994},
   publisher={The MIT Press}
 }
+
+@book{Selten1968oligopoly,
+  title={An~Oligopoly Model with Demand Inertia},
+  author={Selten, Reinhard},
+  year={1968},
+  publisher={Center for Research in Management Science, University of California}
+}
+
+@inproceedings{Koller1994fast,
+  title={Fast Algorithms for Finding Randomized Strategies in~Game Trees},
+  author={Koller, Daphne and Megiddo, Nimrod and Von Stengel, Bernhard},
+  booktitle={Proceedings of~the Twenty-Sixth Annual ACM Symposium on~Theory of~Computing},
+  pages={750--759},
+  year={1994},
+  organization={ACM}
+}
