--- a/bibliography.bib
+++ b/bibliography.bib
@@ -415,3 +415,10 @@
   year={1994},
   organization={ACM}
 }
+
+@article{Johanson2013measuring,
+  title={Measuring the Size of~Large No-Limit Poker Games},
+  author={Johanson, Michael},
+  journal={arXiv preprint arXiv:1302.7008},
+  year={2013}
+}
