Add Hoda2010smoothing & Zinkevich2007regret

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -422,3 +422,22 @@
   journal={arXiv preprint arXiv:1302.7008},
   year={2013}
 }
+
+@article{Hoda2010smoothing,
+  title={Smoothing Techniques for Computing Nash Equilibria of~Sequential Games},
+  author={Hoda, Samid and Gilpin, Andrew and Pena, Javier and Sandholm, Tuomas},
+  journal={Mathematics of~Operations Research},
+  volume={35},
+  number={2},
+  pages={494--512},
+  year={2010},
+  publisher={INFORMS}
+}
+
+@inproceedings{Zinkevich2007regret,
+  title={Regret Minimization in~Games with Incomplete Information},
+  author={Zinkevich, Martin and Johanson, Michael and Bowling, Michael and Piccione, Carmelo},
+  booktitle={Advances in~Neural Information Processing Systems},
+  pages={1729--1736},
+  year={2007}
+}
