--- a/bibliography.bib
+++ b/bibliography.bib
@@ -441,3 +441,10 @@
   pages={1729--1736},
   year={2007}
 }
+
+@inproceedings{Moravcik2016refining,
+  title={Refining Subgames in~Large Imperfect Information Games},
+  author={Moravčík, Matěj and Schmid, Martin and Ha, Karel and Hladík, Milan and Gaukrodger, Stephen J.},
+  booktitle={Thirtieth AAAI Conference on~Artificial Intelligence},
+  year={2016}
+}
