Replace GanzfriedSandholm13improving with Ganzfried2015endgame

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -189,13 +189,6 @@
   address = {New York, NY, USA},
 } 
 
-@inproceedings{GanzfriedSandholm13improving,
-  title={Improving Performance in Imperfect-Information Games with Large State and Action Spaces by Solving Endgames},
-  author={Ganzfried, Sam and Sandholm, Tuomas},
-  booktitle={Computer Poker and Imperfect Information Workshop at the National Conference on Artificial Intelligence (AAAI)},
-  year={2013}
-}
-
 @phdthesis{Muller1995computer,
   title = {Computer {G}o as a Sum of Local Games: an Application of Combinatorial Game Theory},
   author = {M{\"u}ller, Martin},
@@ -447,4 +440,13 @@
   author={Moravčík, Matěj and Schmid, Martin and Ha, Karel and Hladík, Milan and Gaukrodger, Stephen J.},
   booktitle={Thirtieth AAAI Conference on~Artificial Intelligence},
   year={2016}
+}
+
+@inproceedings{Ganzfried2015endgame,
+  title={Endgame Solving in~Large Imperfect-Information Games},
+  author={Ganzfried, Sam and Sandholm, Tuomas},
+  booktitle={Proceedings of~the 2015 International Conference on~Autonomous Agents and Multiagent Systems},
+  pages={37--45},
+  year={2015},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
