--- a/bibliography.bib
+++ b/bibliography.bib
@@ -450,3 +450,10 @@
   year={2015},
   organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
+
+@inproceedings{Cermak2014practical,
+  title={Practical Performance of~Refinements of~{Nash} Equilibria in~Extensive-Form Zero-Sum Games},
+  author={Čermák, Jiří and Bošanský, Branislav and Lisý, Viliam},
+  year={2014},
+  organization={ECAI}
+}
