--- a/bibliography.bib
+++ b/bibliography.bib
@@ -457,3 +457,12 @@
   year={2014},
   organization={ECAI}
 }
+
+@inproceedings{Bosansky2013solving,
+  title={Solving Extensive-Form Games with Double-Oracle Methods},
+  author={Bošanský, Branislav},
+  booktitle={Proceedings of~the 2013 International Conference on Autonomous Agents and Multi-Agent Systems},
+  pages={1423--1424},
+  year={2013},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
