--- a/bibliography.bib
+++ b/bibliography.bib
@@ -466,3 +466,13 @@
   year={2013},
   organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
+
+@inproceedings{Johanson2012efficient,
+  title={Efficient {Nash} Equilibrium Approximation Through {Monte Carlo} Counterfactual Regret Minimization},
+  author={Johanson, Michael and Bard, Nolan and Lanctot, Marc and Gibson, Richard and Bowling, Michael},
+  booktitle={Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems},
+  volume={2},
+  pages={837--846},
+  year={2012},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
