Fix wrong year in BurchJohansonBowling13

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -173,7 +173,7 @@
   publisher={Nature Publishing Group}
 }
 
-@article{BurchJohansonBowling13,
+@article{BurchJohansonBowling2014,
   author = {Burch, N. and Johanson, M. and Bowling, M.},
   title = {Solving Imperfect Information Games Using Decomposition},
   journal = {Proceedings of the Twenty-Eighth Conference on Artificial Intelligence},
