Add Schmid2015automatic & Johanson2013evaluating

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -476,3 +476,19 @@
   year={2012},
   organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
+
+@inproceedings{Schmid2015automatic,
+  title={Automatic Public State Space Abstraction in Imperfect Information Games},
+  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan and Gaukroder, Stephen~J.},
+  booktitle={Workshops at the Twenty-Ninth AAAI Conference on Artificial Intelligence},
+  year={2015}
+}
+
+@inproceedings{Johanson2013evaluating,
+  title={Evaluating State-Space Abstractions in Extensive-Form Games},
+  author={Johanson, Michael and Burch, Neil and Valenzano, Richard and Bowling, Michael},
+  booktitle={Proceedings of the 2013 International Conference on Autonomous Agents and Multi-Agent Systems},
+  pages={271--278},
+  year={2013},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
