--- a/bibliography.bib
+++ b/bibliography.bib
@@ -492,3 +492,10 @@
   year={2013},
   organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
+
+@inproceedings{Schmid2014bounding,
+  title={Bounding the Support Size in Extensive Form Games with Imperfect Information},
+  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan},
+  booktitle={Twenty-Eighth AAAI Conference on Artificial Intelligence},
+  year={2014}
+}
