--- a/bibliography.bib
+++ b/bibliography.bib
@@ -499,3 +499,10 @@
   booktitle={Twenty-Eighth AAAI Conference on Artificial Intelligence},
   year={2014}
 }
+
+@inproceedings{Tammelin2015solving,
+  title={Solving Heads-Up Limit Texas Hold'em},
+  author={Tammelin, Oskari and Burch, Neil and Johanson, Michael and Bowling, Michael},
+  booktitle={Twenty-Fourth International Joint Conference on Artificial Intelligence},
+  year={2015}
+}
