Fix Gaukrodger's name in Schmid2015automatic

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -479,7 +479,7 @@
 
 @inproceedings{Schmid2015automatic,
   title={Automatic Public State Space Abstraction in Imperfect Information Games},
-  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan and Gaukroder, Stephen~J.},
+  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan and Gaukrodger, Stephen~J.},
   booktitle={Workshops at the Twenty-Ninth AAAI Conference on Artificial Intelligence},
   year={2015}
 }
