--- a/bibliography.bib
+++ b/bibliography.bib
@@ -506,3 +506,19 @@
   booktitle={Twenty-Fourth International Joint Conference on Artificial Intelligence},
   year={2015}
 }
+
+@inproceedings{Zinkevich2008regret,
+  title={Regret Minimization in Games with Incomplete Information},
+  author={Zinkevich, Martin and Johanson, Michael and Bowling, Michael and Piccione, Carmelo},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1729--1736},
+  year={2008}
+}
+
+@book{Karpov1997disney,
+  title={Disney's Chess Guide},
+  author={Karpov, Anatoly},
+  isbn={9780713483352},
+  year={1997},
+  publisher={Batsford}
+}
