--- a/bibliography.bib
+++ b/bibliography.bib
@@ -522,3 +522,10 @@
   year={1997},
   publisher={Batsford}
 }
+
+@book{Ehrgott2006multicriteria,
+  title={Multicriteria optimization},
+  author={Ehrgott, Matthias},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
