--- a/bibliography.bib
+++ b/bibliography.bib
@@ -553,3 +553,12 @@
   publisher={Princeton University Press},
   note={\url{https://archive.org/details/theoryofgamesand030098mbp}}
 }
+
+@book{Berlekamp1983winning,
+  title={Winning Ways for Your Mathematical Plays: Games in Particular},
+  author={Berlekamp, E.~R. and Conway, J.~H. and Guy, R.~K.},
+  volume={2},
+  isbn={9780120911523},
+  year={1983},
+  publisher={Acad. Pr.}
+}
