--- a/bibliography.bib
+++ b/bibliography.bib
@@ -562,3 +562,14 @@
   year={1983},
   publisher={Acad. Pr.}
 }
+
+@article{Schaeffer2007checkers,
+  title={Checkers is Solved},
+  author={Schaeffer, Jonathan and Burch, Neil and Bj{\"o}rnsson, Yngvi and Kishimoto, Akihiro and M{\"u}ller, Martin and Lake, Robert and Lu, Paul and Sutphen, Steve},
+  journal={Science},
+  volume={317},
+  number={5844},
+  pages={1518--1522},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
+}
