Replace characters with diacritics by LaTeX accents

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -115,7 +115,7 @@
 }
 
 @article{Bowling2015heads,
-  title={Heads-Up Limit Hold’em Poker is Solved},
+  title={Heads-Up Limit Hold'em Poker is Solved},
   author={Bowling, Michael and Burch, Neil and Johanson, Michael and Tammelin, Oskari},
   journal={Science},
   volume={347},
@@ -316,7 +316,7 @@
 }
 
 @online{Krabbe2014StillersMonster,
-  author = {Krabbé, Tim},
+  author = {Krabb\'{e}, Tim},
   title = {Stiller's Monsters or Perfection in Chess},
   year = 2014,
   url = {https://timkr.home.xs4all.nl/chess/perfect.htm},
@@ -445,7 +445,7 @@
 
 @inproceedings{Moravcik2016refining,
   title={Refining Subgames in~Large Imperfect Information Games},
-  author={Moravčík, Matěj and Schmid, Martin and Ha, Karel and Hladík, Milan and Gau\-krodger, Stephen J.},
+  author={Morav\v{c}\'{i}k, Mat\v{e}j and Schmid, Martin and Ha, Karel and Hlad\'{i}k, Milan and Gau\-krodger, Stephen J.},
   booktitle={Thirtieth AAAI Conference on~Artificial Intelligence},
   year={2016}
 }
@@ -461,14 +461,14 @@
 
 @inproceedings{Cermak2014practical,
   title={Practical Performance of~Refinements of~{Nash} Equilibria in~Extensive-Form Zero-Sum Games},
-  author={Čermák, Jiří and Bošanský, Branislav and Lisý, Viliam},
+  author={\v{C}erm\'{a}k, Ji\v{r}\'{i} and Bo\v{s}ansk\'{y}, Branislav and Lis\'{y}, Viliam},
   year={2014},
   organization={ECAI}
 }
 
 @inproceedings{Bosansky2013solving,
   title={Solving Extensive-Form Games with Double-Oracle Meth\-ods},
-  author={Bošanský, Branislav},
+  author={Bo\v{s}ansk\'{y}, Branislav},
   booktitle={Proceedings of~the 2013 International Conference on Autonomous Agents and Multi-Agent Systems},
   pages={1423--1424},
   year={2013},
@@ -487,7 +487,7 @@
 
 @inproceedings{Schmid2015automatic,
   title={Automatic Public State Space Abstraction in Imperfect Information Games},
-  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan and Gaukrodger, Stephen~J.},
+  author={Schmid, Martin and Morav\v{c}\'{i}k, Mat\v{e}j and Hlad\'{i}k, Milan and Gaukrodger, Stephen~J.},
   booktitle={Workshops at the Twenty-Ninth AAAI Conference on Artificial Intelligence},
   year={2015}
 }
@@ -503,7 +503,7 @@
 
 @inproceedings{Schmid2014bounding,
   title={Bounding the Support Size in Extensive Form Games with Imperfect Information},
-  author={Schmid, Martin and Moravčík, Matěj and Hladík, Milan},
+  author={Schmid, Martin and Morav\v{c}\'{i}k, Mat\v{e}j and Hlad\'{i}k, Milan},
   booktitle={Twenty-Eighth AAAI Conference on Artificial Intelligence},
   year={2014}
 }
@@ -539,8 +539,8 @@
 }
 
 @book{Grygarova1996zaklady,
-  author={Grygarová, Libuše},
-  title={Základy Vícekriteriálního Programování},
+  author={Grygarov\'{a}, Libu\v{s}e},
+  title={Z\'{a}klady V\'{i}cekriteri\'{a}ln\'{i}ho Programov\'{a}n\'{i}},
   year={1996},
   publisher={Charles University},
   edition={1}
