--- a/bibliography.bib
+++ b/bibliography.bib
@@ -573,3 +573,21 @@
   year={2007},
   publisher={American Association for the Advancement of Science}
 }
+
+@article{Silver2017AlphaGoZero,
+  title={Mastering the Game of {G}o without Human Knowledge},
+  author={Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
+  journal={Nature},
+  volume={550},
+  number={7676},
+  pages={354--359},
+  year={2017},
+  publisher={Nature Research}
+}
+
+@article{Silver2017AlphaZero,
+  title={Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm},
+  author={Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
+  journal={arXiv preprint arXiv:1712.01815},
+  year={2017}
+}
