Add `Tammelin2014solving` to `bibliography.bib`
Signed-off-by: Karel Ha <mathemage@gmail.com>

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -608,3 +608,10 @@
   year={2011},
   organization={Springer}
 }
+
+@article{Tammelin2014solving,
+  title={Solving Large Imperfect Information Games Using CFR+},
+  author={Tammelin, Oskari},
+  journal={arXiv preprint arXiv:1407.5042},
+  year={2014}
+}
