--- a/bibliography.bib
+++ b/bibliography.bib
@@ -610,7 +610,7 @@
 }
 
 @article{Tammelin2014solving,
-  title={Solving Large Imperfect Information Games Using CFR+},
+  title={Solving Large Imperfect Information Games Using {CFR+}},
   author={Tammelin, Oskari},
   journal={arXiv preprint arXiv:1407.5042},
   year={2014}
