--- a/bibliography.bib
+++ b/bibliography.bib
@@ -626,3 +626,9 @@
   year={2017},
   publisher={American Association for the Advancement of Science}
 }
+
+@article{Im2016generative,
+  title={Generative Adversarial Metric},
+  author={Im, Daniel Jiwoong and Kim, Chris Dongjoo and Jiang, Hui and Memisevic, Roland},
+  year={2016}
+}
