Update Im2016generative: add booktitle
Signed-off-by: Karel Ha <mathemage@gmail.com>

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -627,8 +627,9 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@article{Im2016generative,
+@inproceeding{Im2016generative,
   title={Generative Adversarial Metric},
   author={Im, Daniel Jiwoong and Kim, Chris Dongjoo and Jiang, Hui and Memisevic, Roland},
+  booktitle={Workshops at the International Conference on Learning Representations},
   year={2016}
 }
