--- a/bibliography.bib
+++ b/bibliography.bib
@@ -630,6 +630,6 @@
 @inproceeding{Im2016generative,
   title={Generative Adversarial Metric},
   author={Im, Daniel Jiwoong and Kim, Chris Dongjoo and Jiang, Hui and Memisevic, Roland},
-  booktitle={Workshops at the International Conference on Learning Representations},
+  booktitle={Workshops at the Fourth International Conference on Learning Representations},
   year={2016}
 }
