--- a/bibliography.bib
+++ b/bibliography.bib
@@ -633,3 +633,10 @@
   booktitle={Workshops at the Fourth International Conference on Learning Representations},
   year={2016}
 }
+
+@article{Jaiswal2018capsulegan,
+  title={CapsuleGAN: Generative Adversarial Capsule Network},
+  author={Jaiswal, Ayush and AbdAlmageed, Wael and Natarajan, Premkumar},
+  journal={arXiv preprint arXiv:1802.06167},
+  year={2018}
+}
